--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,17 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome to #{title}
+doctype html
+html(xmlns='http://www.w3.org/1999/xhtml')
+  head
+    meta(http-equiv='content-type', content='text/html; charset=utf-8')
+    link(rel='stylesheet', href='_css/menu.css')
+    title Initial Page
+  body
+    h1
+      center Welcome to the Bitcoin's World 
+    hr
+    .menu
+      a.active(href='index.html') Home
+      a(href='check_wallet.html') Check Bitcoin Wallet
+      a(href='create_btcwallet.html') Creating Bitcoin Wallet
+      a(href='cryptofile.html') Crypto File
+    h1(align='center')  Bitcoin is an innovative payment network and a new kind of money. 
+    iframe(width='672', height='378', style='float:center', src='https://www.youtube.com/embed/Gc2en3nHxA4', frameborder='0', allow='autoplay; encrypted-media', allowfullscreen='')
